fixed offcenter chevron

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -192,7 +192,7 @@ p a {
 }
 
 .fa-chevron-down {
-  transform: translate(-50%, -50%);
+  transform: translateY(-100%);
   font-size: 3rem;
   color: $main-orange;
   animation: chevron-slide 3s ease-in-out infinite;
@@ -206,7 +206,7 @@ p a {
 }
 @keyframes chevron-slide {
   50% {
-    transform: translate(-50%, 10px);
+    transform: translateY(0%);
     opacity: 1;
   }
 }
